// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileCard /> all information should render appropriate elements 1`] = `
<div
  class="sx3i3o8 sx3i3o8rjvnk--direction-column sx3i3o8c5e1g--direction-row"
  data-testid="filecard"
>
  <div
    class="sxi5ivc"
  >
    Resume
  </div>
  <div
    class="sxya21h"
  >
    <h6>
      title_of_resume.pdf
    </h6>
  </div>
  <div
    class="sxya21h"
  >
    <p>
      Assigned
    </p>
    <p>
      1/2/2022
    </p>
  </div>
  <div
    class="sxya21h"
  >
    <p>
      Completed
    </p>
    <p>
      1/3/2023
    </p>
  </div>
  <div
    class="sxya21h"
  >
    <a
      class="sxt5frx sxt5frx7coim--appearance-secondary sxt5frxfvbxp--size-large sxt5frxh8nzl--width-full"
    >
      Upload
    </a>
  </div>
</div>
`;

exports[`<FileCard /> no secondary information should render appropriate elements 1`] = `
<div
  class="sx3i3o8 sx3i3o8rjvnk--direction-column sx3i3o8c5e1g--direction-row"
  data-testid="filecard"
>
  <div
    class="sxi5ivc"
  >
    Resume
  </div>
  <div
    class="sxya21h"
  >
    <h6>
      title_of_resume.pdf
    </h6>
  </div>
  <div
    class="sxya21h"
  />
  <div
    class="sxya21h"
  >
    <p>
      Completed
    </p>
    <p>
      1/3/2023
    </p>
  </div>
  <div
    class="sxya21h"
  >
    <a
      class="sxt5frx sxt5frx7coim--appearance-secondary sxt5frxfvbxp--size-large sxt5frxh8nzl--width-full"
    >
      Upload
    </a>
  </div>
</div>
`;

exports[`<FileCard /> no teritiary information should render appropriate elements 1`] = `
<div
  class="sx3i3o8 sx3i3o8rjvnk--direction-column sx3i3o8c5e1g--direction-row"
  data-testid="filecard"
>
  <div
    class="sxi5ivc"
  >
    Resume
  </div>
  <div
    class="sxya21h"
  >
    <h6>
      title_of_resume.pdf
    </h6>
  </div>
  <div
    class="sxya21h"
  >
    <p>
      Assigned
    </p>
    <p>
      1/2/2022
    </p>
  </div>
  <div
    class="sxya21h"
  />
  <div
    class="sxya21h"
  >
    <a
      class="sxt5frx sxt5frx7coim--appearance-secondary sxt5frxfvbxp--size-large sxt5frxh8nzl--width-full"
    >
      Upload
    </a>
  </div>
</div>
`;

exports[`<FileCard /> no title should render appropriate elements 1`] = `
<div
  class="sx3i3o8 sx3i3o8rjvnk--direction-column sx3i3o8c5e1g--direction-row"
  data-testid="filecard"
>
  <div
    class="sxi5ivc"
  >
    Resume
  </div>
  <div
    class="sxya21h"
  >
    <h6>
      No Upload
    </h6>
  </div>
  <div
    class="sxya21h"
  >
    <p>
      Assigned
    </p>
    <p>
      1/2/2022
    </p>
  </div>
  <div
    class="sxya21h"
  >
    <p>
      Completed
    </p>
    <p>
      1/3/2023
    </p>
  </div>
  <div
    class="sxya21h"
  >
    <a
      class="sxt5frx sxt5frx7coim--appearance-secondary sxt5frxfvbxp--size-large sxt5frxh8nzl--width-full"
    >
      Upload
    </a>
  </div>
</div>
`;
